force-app/main/default/objects/Stock_Summary__c/Stock_Summary__c.object-meta.xml
<CustomObject>
    <label>Stock Summary</label>
    <nameField>
        <displayFormat>SD-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>