force-app/main/default/objects/Stock_Summary__c/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>