force-app/main/default/objects/Stock_Summary__c/fields/High_Open_Variance__c.field-meta.xml
<CustomField>
    <fullName>High_Open_Variance__c</fullName>
    <formula>High__c - Open__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Open Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>