force-app/main/default/objects/Stock_Summary__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>