force-app/main/default/objects/Stock_Summary__c/fields/Open_Low_Variance__c.field-meta.xml
<CustomField>
    <fullName>Open_Low_Variance__c</fullName>
    <formula>Open__c - Low__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Low Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>