force-app/main/default/objects/Stock_Summary__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <formula>if(Open__c &lt; Close__c,&#39;UP&#39;,&#39;Down&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trend</label>
    <type>Text</type>
</CustomField>