force-app/main/default/objects/Stock_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Symbol__c</columns>
    <columns>Date__c</columns>
    <columns>Open__c</columns>
    <columns>High__c</columns>
    <columns>Low__c</columns>
    <columns>Close__c</columns>
    <columns>Volume__c</columns>
    <columns>High_Low_Variance__c</columns>
    <columns>High_Open_Variance__c</columns>
    <columns>Open_Low_Variance__c</columns>
    <columns>Trend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>